Adding working app.js file

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="card card-primary">
-          <div class="card-header">
-            <h4 class="card-title">Demographic Info</h4>
+          <div style="background-color: #1F77B4;"class="card-header">
+            <h6 style="color: white" class="card-title">Demographic Info</h4>
           </div>
-          <div id="sample-metadata" class="card-body"></div>
+          <div style="font-size: 10" id="sample-metadata" class="card-body"></div>
         </div>
       </div>
       <div class="col-md-5">
