Adding final app.js file and README

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div style="background-color: #1F77B4;"class="card-header">
             <h6 style="color: white" class="card-title">Demographic Info</h4>
           </div>
-          <div style="font-size: 10" id="sample-metadata" class="card-body"></div>
+          <div id="sample-metadata" class="card-body"></div>
         </div>
       </div>
       <div class="col-md-5">
